--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img src="https://ipv4.games/claim?name=plscuddle.me" alt="" style="display: none">
     <div class="flex-col">
         <div class="flex-row">
             <div class="flex-grow"></div>
             <h1>Select the game you're addicted to:</h1>
             <div class="flex-grow"></div>
         </div>
+        <!--
         <div class="flex-row">
             <div class="flex-grow"></div>
             <a href="dopamine.html?game=genshin">
@@ -22,15 +24,16 @@
         </div>
         <div class="flex-row">
             <div class="flex-grow"></div>
-            <a href="dopamine.html?game=codm">
-                <img src="assets/codm.png" alt="" class="game-img">
+            <a href="dopamine.html?game=cs2">
+                <img src="assets/cs2.png" alt="" class="game-img">
             </a>
             <div class="flex-grow"></div>
         </div>
+        -->
         <div class="flex-row">
             <div class="flex-grow"></div>
-            <a href="dopamine.html?game=cs2">
-                <img src="assets/cs2.png" alt="" class="game-img">
+            <a href="dopamine.html?game=codm">
+                <img src="assets/codm.png" alt="" class="game-img">
             </a>
             <div class="flex-grow"></div>
         </div>
